# servicos_publicos

./: Dockerfile  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/servicos_publicos/: main.py
backend/src/servicos_publicos/models/: models.py
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/components/: ServicoCard.jsx  ServicoForm.jsx
frontend/src/pages/: HomePage.jsx
frontend/src/services/: api.js
src/servicos_publicos/: main.py
src/servicos_publicos/configs/: database.py
