[project]
name = "servicos-publicos"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Rocha",email = "lucas.diegorr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.2,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlmodel (>=0.0.25,<0.0.26)",
    "alembic (>=1.16.5,<2.0.0)",
]

[tool.poetry]
packages = [{include = "servicos_publicos", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
