[tool.poetry]
name = "servicos-publicos"
version = "0.1.0"
description = ""
authors = ["Lucas Rocha <lucas.diegorr@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.2"
uvicorn = "^0.35.0"
psycopg2-binary = "^2.9.10"
sqlmodel = "^0.0.25"
alembic = "^1.16.5"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
